@@ -1,4 +1,4 @@
-// 1.20.1	2024-06-20T19:32:32.7421963	Recipes
+// 1.20.1	2024-06-22T02:10:04.5075398	Recipes
 2390840e186a935fdc9972915cfa4c3c2b5b4ae5 data/arts_and_crafts/advancements/recipes/building_blocks/black_mud_bricks_dye_recipe.json
 474f4553132bb60373458112ba401465142f6af8 data/arts_and_crafts/advancements/recipes/building_blocks/black_mud_brick_slab.json
 61a8bd197b771141368685879050ba70e5583b2e data/arts_and_crafts/advancements/recipes/building_blocks/black_mud_brick_slab_dye_recipe.json
@@ -749,6 +749,7 @@ d1b06f1d908908b98982c6277ef4f48927486e6c data/arts_and_crafts/advancements/recip
 717475387c8d15a09a45e3e861cdc65e3573f1e1 data/arts_and_crafts/advancements/recipes/building_blocks/stonecutting/black_terracotta_shingle_slab_from_black_terracotta_shingles_stonecutting.json
 394cdbd7a26851a42614634f8ea10c45374adc6f data/arts_and_crafts/advancements/recipes/building_blocks/stonecutting/black_terracotta_shingle_stairs_from_black_terracotta_shingles_stonecutting.json
 441ac33a3d574983a0098fae9649c3e6d1418381 data/arts_and_crafts/advancements/recipes/building_blocks/stonecutting/black_terracotta_shingle_wall_from_black_terracotta_shingles_stonecutting.json
+167c7ec60b4026227e52ae3823b74de3238ef1bb data/arts_and_crafts/advancements/recipes/building_blocks/stonecutting/bleached_chalk_stick_from_bleached_chalk_stonecutting.json
 69dd7efd3d2a9301e519bec0954aff6b595bf974 data/arts_and_crafts/advancements/recipes/building_blocks/stonecutting/blue_chalk_stick_from_blue_chalk_stonecutting.json
 8688653661a13d3ed8d17ff9118bc81c46421713 data/arts_and_crafts/advancements/recipes/building_blocks/stonecutting/blue_mud_brick_slab_from_blue_mud_bricks_stonecutting.json
 77d4eb62d2c4f7216e1aa54dc60e3f6b97f3eb49 data/arts_and_crafts/advancements/recipes/building_blocks/stonecutting/blue_mud_brick_stairs_from_blue_mud_bricks_stonecutting.json
@@ -2048,6 +2049,7 @@ d9b9278ba392e4e0744c00a45512f91007b56792 data/arts_and_crafts/recipes/stonecutti
 1a291b8592718a8cfa19af1a5a5b3a1b84ff5abc data/arts_and_crafts/recipes/stonecutting/black_terracotta_shingle_slab_from_black_terracotta_shingles_stonecutting.json
 d0a536c51707e547815d00c51c4cb7c0e85dbf23 data/arts_and_crafts/recipes/stonecutting/black_terracotta_shingle_stairs_from_black_terracotta_shingles_stonecutting.json
 886c7cdc9b00ad51cec5258952518b88063398dd data/arts_and_crafts/recipes/stonecutting/black_terracotta_shingle_wall_from_black_terracotta_shingles_stonecutting.json
+016949f524bee5f7ceb8cbed708ef176cd2fe439 data/arts_and_crafts/recipes/stonecutting/bleached_chalk_stick_from_bleached_chalk_stonecutting.json
 53f80b1847602ad44a92260aa0a3958e89f4c8a0 data/arts_and_crafts/recipes/stonecutting/blue_chalk_stick_from_blue_chalk_stonecutting.json
 0987bc8a59522d8b20abf11ed4f492233b8b7176 data/arts_and_crafts/recipes/stonecutting/blue_mud_brick_slab_from_blue_mud_bricks_stonecutting.json
 9b4afc1ee9d10de46c70a41cf50bb21617a7ee0a data/arts_and_crafts/recipes/stonecutting/blue_mud_brick_stairs_from_blue_mud_bricks_stonecutting.json
