@@ -1,0 +1,35 @@
+{
+  "parent": "minecraft:recipes/root",
+  "criteria": {
+    "has_bleached_chalk": {
+      "conditions": {
+        "items": [
+          {
+            "items": [
+              "arts_and_crafts:bleached_chalk"
+            ]
+          }
+        ]
+      },
+      "trigger": "minecraft:inventory_changed"
+    },
+    "has_the_recipe": {
+      "conditions": {
+        "recipe": "arts_and_crafts:stonecutting/bleached_chalk_stick_from_bleached_chalk_stonecutting"
+      },
+      "trigger": "minecraft:recipe_unlocked"
+    }
+  },
+  "requirements": [
+    [
+      "has_bleached_chalk",
+      "has_the_recipe"
+    ]
+  ],
+  "rewards": {
+    "recipes": [
+      "arts_and_crafts:stonecutting/bleached_chalk_stick_from_bleached_chalk_stonecutting"
+    ]
+  },
+  "sends_telemetry_event": false
+}
