@@ -1,0 +1,8 @@
+{
+  "type": "minecraft:stonecutting",
+  "count": 1,
+  "ingredient": {
+    "item": "arts_and_crafts:bleached_chalk"
+  },
+  "result": "arts_and_crafts:bleached_chalk_stick"
+}
